tests/typing/pass/if-eq.t20
;; Compound condition expression.

(: test Int)
(define test
  (if (eq? 0 (+ 20 (- 20 40))) 0 1))
