tests/typing/fail/if-bad-condition.t20
;; Conditions have type Bool.

(: test Int)
(define test
  (if (+ 40 2) 0 1))
